# sf-quant-labs

./: .gitignore  README.md  pyproject.toml
labs/: lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb
